--- a/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor.css
+++ b/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor.css
@@ -16,8 +16,8 @@
 }
 
 .loading-card {
-  border-radius: calc(var(--br-lg) * 1.5);
-  padding: var(--spacing-lg) var(--spacing-md);
+  border-radius: var(--br-md);
+  padding: var(--spacing-md);
   width: 100%;
   min-height: 200px;
   box-shadow: var(--bs-md);
@@ -48,7 +48,7 @@
 .loading-card h3 {
   color: var(--text-primary);
   margin-bottom: var(--spacing-lg);
-  font-size: calc(var(--fs-base) * 1.2);
+  font-size:  var(--fs-md);
   font-weight: 600;
   display: flex;
   align-items: center;
@@ -60,7 +60,7 @@
 
 /* Icon Styles */
 .icon {
-  font-size: calc(var(--fs-base) * 1.5);
+  font-size: var(--fs-sm);
   color: var(--text-primary);
   margin-right: var(--spacing-sm);
 }
@@ -144,16 +144,16 @@
 
 .loading-card p {
   color: var(--text-secondary);
-  font-size: var(--fs-md);
-  margin-top: var(--spacing-md);
+  font-size: var(--fs-sm);
+  margin-top: var(--spacing-sm);
   width: 100%;
   text-align: center;
 }
 
 .loading-card.theme-light p {
   color: var(--text-primary);
-  font-size: var(--fs-md);
-  margin-top: var(--spacing-md);
+  font-size: var(--fs-sm);
+  margin-top: var(--spacing-sm);
   width: 100%;
   text-align: center;
 }
@@ -169,9 +169,9 @@
 /*Button styles*/
 .btn {
   font-family: "Poppins", sans-serif;
-  font-size: var(--fs-md);
+  font-size: var(--fs-sm);
   font-weight: var(--fw-500);
-  padding: var(--spacing-md);
+  padding: var(--spacing-sm);
   border-radius: var(--br-md);
   border: none;
   cursor: pointer;
@@ -245,6 +245,6 @@
 /* Responsive adjustments */
 @media (max-width: 640px) {
   .container {
-    padding: var(--spacing-md);
+    padding: var(--spacing-sm);
   }
 }
