--- a/DropBear.Blazor/Components/Badges/DropBearBadge.razor.css
+++ b/DropBear.Blazor/Components/Badges/DropBearBadge.razor.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   padding: var(--spacing-xs);
-  font-size: var(--fs-sm);
+  font-size: var(--fs-xs);
   font-weight: 500;
   line-height: 1;
   text-align: center;
@@ -34,7 +34,7 @@
 /* Badge Colors */
 .dropbear-badge-default {
   color: var(--clr-text-primary);
-  background-color: var(--clr-primary);
+  background-color: var(--clr-grey-500);
 }
 
 .dropbear-badge-secondary {
