--- a/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
+++ b/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
@@ -93,7 +93,7 @@
 
 /* Button Colors */
 .dropbear-btn-default {
-  --button-bg-color: var(--clr-primary);
+  --button-bg-color: var(--clr-grey-500);
   --button-hover-bg-color: var(--clr-secondary);
 }
 
