--- a/DropBear.Blazor/Components/Lists/DropBearList.razor.css
+++ b/DropBear.Blazor/Components/Lists/DropBearList.razor.css
@@ -10,7 +10,7 @@
 .drop-bear-list-header {
   background-color: var(--clr-surface-primary, #f44336);
   color: #fff;
-  padding: calc(var(--spacing-md, 8px) * 1.5);
+  padding: var(--spacing-md);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -48,7 +48,7 @@
 }
 
 .drop-bear-list-item {
-  padding: calc(var(--spacing-md, 8px) * 1.5);
+  padding: var(--spacing-sm, 8px);
   border-bottom: 1px solid #f0f0f0;
   display: flex;
   align-items: center;
@@ -60,11 +60,11 @@
 }
 
 .drop-bear-list-item-icon {
-  margin-right: calc(var(--spacing-md, 8px) * 1);
+  margin-right: calc(var(--spacing-sm, 8px) * 1);
 }
 
 .drop-bear-list-item-empty {
-  padding: calc(var(--spacing-md, 8px) * 1.5);
+  padding: calc(var(--spacing-sm, 8px) * 1.5);
   text-align: center;
 }
 
