--- a/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor.css
+++ b/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor.css
@@ -9,10 +9,10 @@
 .loading-card-container {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-md);
+  gap: var(--spacing-sm);
   max-width: 400px;
   margin: 0 auto;
-  padding: var(--spacing-xl);
+  padding: var(--spacing-sm);
 }
 
 .loading-card {
@@ -47,22 +47,24 @@
 
 .loading-card h3 {
   color: var(--text-primary);
-  margin-bottom: var(--spacing-lg);
+  margin-bottom: var(--spacing-sm);
   font-size:  var(--fs-md);
-  font-weight: 600;
+  font-weight: var(--fw-600);
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   gap: var(--spacing-sm);
   width: 100%;
+  border-bottom: 1px solid var(--clr-grey-300);
+  padding-bottom: var(--spacing-sm);
 }
 
 /* Icon Styles */
 .icon {
-  font-size: var(--fs-sm);
+  font-size: var(--fs-md);
   color: var(--text-primary);
-  margin-right: var(--spacing-sm);
+  /*margin-right: var(--spacing-sm);*/
 }
 
 /* Progress Bar Styles */
@@ -159,7 +161,7 @@
 }
 
 .progress-text {
-  color: var(--text-secondary);
+  color: var(--text-primary);
   font-size: var(--fs-sm);
   font-weight: 600;
   position: relative;
